# ozon-parser

./: main.py  pyproject.toml
